I changed the link for the discord and i also changed the image size for the discord

--- a/Amongus.html
+++ b/Amongus.html
@@ -6,11 +6,13 @@ AMONK
     </title></header>
     <body>
     <h1>
-        Amongus Vr but gtag movement
+        AMUNKUS 
         </h1>
-        
-<a href="https://discord.com/channels/1041897578830245989/1041897579312578579" target="_blank">
-<img src="https://th.bing.com/th/id/OIP.bJr_xsyGZYdfWfcPWGMVGAHaEK?pid=ImgDet&rs=1">
+        <h4>
+            This is gonna be a game based off of amongus vr but there will be Gorilla tag movement
+        </h4>
+<a href="https://discord.gg/a5D5bfFKu5" target="_blank">
+<img src="https://th.bing.com/th/id/OIP.bJr_xsyGZYdfWfcPWGMVGAHaEK?pid=ImgDet&rs=1" height="10%" width="10%">
 
 </a>
 
