I added the fact that hte game is not out yet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ AMUNK
     </title></header>
     <body>
     <h1>
+        the game is NOT out yet
+    </h1>
+    
+        <h1>
         AMUNKUS 
         </h1>
         <h4>
