I changed the social links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@ AMUNK
         <h4>
             This is gonna be a game based off of amongus vr but there will be Gorilla tag movement
         </h4>
-<a href="https://discord.gg/a5D5bfFKu5" target="_blank">
-<img src="https://th.bing.com/th/id/OIP.bJr_xsyGZYdfWfcPWGMVGAHaEK?pid=ImgDet&rs=1" height="10%" width="10%">
-
-</a>
 
 
 
@@ -32,16 +28,11 @@ AMUNK
 </h6>
 
 
+<a href="https://discord.gg/a5D5bfFKu5" target="_blank">
+<img src="https://th.bing.com/th/id/OIP.4qt93G-Dwfl8xuB6U3ZGrAHaEK?pid=ImgDet&rs=1" height="2%" width="2%"> <a href="https://www.youtube.com/@spirevr8722/featured" target="_blank"> <img src="https://th.bing.com/th/id/OIP.Y6RcBYe6lzGaBhtDdFhOcgHaFN?pid=ImgDet&rs=1" height=2% width=2%></a> 
 
 
-
-
-
-
-
-
-
-
+</a> 
 
 
 
