--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
 AMUNK
     </title></header>
     <body>
-    <h1>
+   
+        <h1>
+            AMUNKUS 
+            </h1>
+   
+   
+        <h1>
         the game is NOT out yet
     </h1>
     
-        <h1>
-        AMUNKUS 
-        </h1>
+
+<img src="https://th.bing.com/th/id/OIP.mCwAERe-bueoeNttKgyksAHaEK?pid=ImgDet&rs=1" height="15%" width="15%">
+
+
+
+        
+
+
         <h4>
             This is gonna be a game based off of amongus vr but there will be Gorilla tag movement
         </h4>
@@ -27,9 +38,14 @@ AMUNK
     website made by @GTR
 </h6>
 
+<h6> credit to  SpireVR, LavaBoiledMuffins, GTR, Firemonke, Wes, FantaAshton, and Sharkthemonke</h6>
 
 <a href="https://discord.gg/a5D5bfFKu5" target="_blank">
 <img src="https://th.bing.com/th/id/OIP.4qt93G-Dwfl8xuB6U3ZGrAHaEK?pid=ImgDet&rs=1" height="2%" width="2%"> <a href="https://www.youtube.com/@spirevr8722/featured" target="_blank"> <img src="https://th.bing.com/th/id/OIP.Y6RcBYe6lzGaBhtDdFhOcgHaFN?pid=ImgDet&rs=1" height=2% width=2%></a> 
+
+
+
+
 
 
 </a> 
