I made the website for a different game

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <header> 
         <title>
-AMUNK
+Just Monkeys
     </title></header>
     <body>
    
         <h1>
-            AMUNKUS 
+            Just Monkeys
             </h1>
    
    
@@ -16,7 +16,7 @@ AMUNK
     </h1>
     
 
-<img src="https://th.bing.com/th/id/OIP.mCwAERe-bueoeNttKgyksAHaEK?pid=ImgDet&rs=1" height="15%" width="15%">
+<img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" height="15%" width="15%">
 
 
 
@@ -24,7 +24,7 @@ AMUNK
 
 
         <h4>
-            This is gonna be a game based off of amongus vr but there will be Gorilla tag movement
+            The game is going to be released sometime between December 15th and January 1st
         </h4>
 
 
@@ -40,7 +40,7 @@ AMUNK
 
 <h6> credit to  SpireVR, LavaBoiledMuffins, GTR, Firemonke, Wes, FantaAshton, and Sharkthemonke</h6>
 
-<a href="https://discord.gg/a5D5bfFKu5" target="_blank">
+<a href="https://discord.gg/BnP3G3yWy4" target="_blank">
 <img src="https://th.bing.com/th/id/OIP.4qt93G-Dwfl8xuB6U3ZGrAHaEK?pid=ImgDet&rs=1" height="2%" width="2%"> <a href="https://www.youtube.com/@spirevr8722/featured" target="_blank"> <img src="https://th.bing.com/th/id/OIP.Y6RcBYe6lzGaBhtDdFhOcgHaFN?pid=ImgDet&rs=1" height=2% width=2%></a> 
 
 
