I have added a new image and made it so that you can click on the image to view it in a new tab

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@ Just Monkeys
     </h1>
     
 
-<img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" height="15%" width="15%">
+ <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" target="_blank">                    <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" height="15%" width="15%"> </a>  <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727085488418826/Screenshot_2022-11-22_163108.png" target="_blank"> <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727085488418826/Screenshot_2022-11-22_163108.png" height="40%" width="40%"> </a>
 
 
 
-        
 
 
-        <h4>
+
+<h4>
             The game is going to be released sometime between December 15th and January 1st
-        </h4>
+</h4>
 
 
 
