--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Just Monkeys
     </h1>
     
 
- <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" target="_blank">                    <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" height="15%" width="15%"> </a>  <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727085488418826/Screenshot_2022-11-22_163108.png" target="_blank"> <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727085488418826/Screenshot_2022-11-22_163108.png" height="40%" width="40%"> </a>
+ <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" target="_blank">                    <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" height="15%" width="15%"> </a>  <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727085488418826/Screenshot_2022-11-22_163108.png" target="_blank"> <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727085488418826/Screenshot_2022-11-22_163108.png" height="40%" width="40%"> </a> <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1047179604210765864/Screenshot_2022-11-29_105734.png" target="_blank"> <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1047179604210765864/Screenshot_2022-11-29_105734.png" height="28%" width="28%">  </a>
 
 
 
@@ -38,7 +38,7 @@ Just Monkeys
     website made by @GTR
 </h6>
 
-<h6> credit to  SpireVR, LavaBoiledMuffins, GTR, Firemonke, Wes, FantaAshton, and Sharkthemonke</h6>
+<h6> credit to  SpireVR, LavaBoiledMuffins, GTR, Firemonke, Wes, and Sharkthemonke</h6>
 
 <a href="https://discord.gg/BnP3G3yWy4" target="_blank">
 <img src="https://th.bing.com/th/id/OIP.4qt93G-Dwfl8xuB6U3ZGrAHaEK?pid=ImgDet&rs=1" height="2%" width="2%"> <a href="https://www.youtube.com/@spirevr8722/featured" target="_blank"> <img src="https://th.bing.com/th/id/OIP.Y6RcBYe6lzGaBhtDdFhOcgHaFN?pid=ImgDet&rs=1" height=2% width=2%></a> 
