--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Just Monkeys
     website made by @GTR
 </h6>
 
-<h6> credit to  SpireVR, LavaBoiledMuffins, GTR, Firemonke, Wes, and Sharkthemonke</h6>
+<h6> credit to  SpireVR, LavaBoiledMuffins, GTR, Firemonke, Wes, Slash, and Sharkthemonke</h6>
 
 <a href="https://discord.gg/BnP3G3yWy4" target="_blank">
 <img src="https://th.bing.com/th/id/OIP.4qt93G-Dwfl8xuB6U3ZGrAHaEK?pid=ImgDet&rs=1" height="2%" width="2%"> <a href="https://www.youtube.com/@spirevr8722/featured" target="_blank"> <img src="https://th.bing.com/th/id/OIP.Y6RcBYe6lzGaBhtDdFhOcgHaFN?pid=ImgDet&rs=1" height=2% width=2%></a> 
