--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@ Just Monkeys
     </h1>
     
 
- <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" target="_blank">                    <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" height="15%" width="15%"> </a>  <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727085488418826/Screenshot_2022-11-22_163108.png" target="_blank"> <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727085488418826/Screenshot_2022-11-22_163108.png" height="40%" width="40%"> </a> <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1047581036374134884/Screenshot_2022-11-30_133124.png" target="_blank"> <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1047581036374134884/Screenshot_2022-11-30_133124.png" height="33%" width="33%">  </a>
+ <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" target="_blank">                    <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" height="15%" width="15%"> </a>  
 
-
-
-
+<h2>Sneak Peaks</h2>
+<a href="https://cdn.discordapp.com/attachments/1041899577684529254/1049724617507475559/Screenshot_2022-12-06_113029.png" target="_blank"> <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1049724617507475559/Screenshot_2022-12-06_113029.png" height="10%" width="10%"></a> <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1049101237070606356/Screenshot_2022-12-04_181312.png" target="_blank"> <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1049101237070606356/Screenshot_2022-12-04_181312.png" width="15%" height="15%"></a><a href="https://cdn.discordapp.com/attachments/1041899577684529254/1049560037959417896/Screenshot_2022-12-06_003632.png" target="_blank"><img src="https://cdn.discordapp.com/attachments/1041899577684529254/1049560037959417896/Screenshot_2022-12-06_003632.png" height="15%" width="15%"></a> <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1047283699709911070/Screenshot_2022-11-29_174725.png" target="_blank"><img src="https://cdn.discordapp.com/attachments/1041899577684529254/1047283699709911070/Screenshot_2022-11-29_174725.png" width="9%" height="9%"></a><a href="https://cdn.discordapp.com/attachments/1041899577684529254/1047581036374134884/Screenshot_2022-11-30_133124.png" target="_blank"><img src="https://cdn.discordapp.com/attachments/1041899577684529254/1047581036374134884/Screenshot_2022-11-30_133124.png" height="13%" width="13%"></a>
 
 
 <h4>
