--- a/index.html
+++ b/index.html
@@ -40,15 +40,11 @@ Just Monkeys
 <h6> credit to  SpireVR, LavaBoiledMuffins, GTR, Firemonke, Wes, Slash, and Sharkthemonke</h6>
 
 <a href="https://discord.gg/BnP3G3yWy4" target="_blank">
-<img src="https://th.bing.com/th/id/OIP.4qt93G-Dwfl8xuB6U3ZGrAHaEK?pid=ImgDet&rs=1" height="2%" width="2%"> <a href="https://www.youtube.com/@spirevr8722/featured" target="_blank"> <img src="https://th.bing.com/th/id/OIP.Y6RcBYe6lzGaBhtDdFhOcgHaFN?pid=ImgDet&rs=1" height=2% width=2%></a> 
+<img src="https://th.bing.com/th/id/OIP.4qt93G-Dwfl8xuB6U3ZGrAHaEK?pid=ImgDet&rs=1" height="2%" width="2%"> </a>
 
 
 
-
-
-
-</a> 
-
+<a href="https://www.youtube.com/@spirevr8722/featured" target="_blank"> <H7>Spires YT</H7 ></a> <a href="https://www.youtube.com/@gorilla.monkey_vr6959" target="_blank"> <H7>GTR's YT</H7></a>
 
 
 
