I added more instructions for the sneak peaks

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Just Monkeys
 
  <a href="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" target="_blank">                    <img src="https://cdn.discordapp.com/attachments/1041899577684529254/1044727182095822960/Screenshot_2022-11-22_163122.png" height="15%" width="15%"> </a>  
 <a href="https://Sneak-Peaks.jonathanjaysand.repl.co" target="_blank">
-<h2>Sneak Peaks</h2>
+<h2>Click here for Sneak Peaks</h2>
 </a>
 
 
